fix highlight step in dark mode

--- a/ui/src/assets/style/themes/theme.darkly.scss
+++ b/ui/src/assets/style/themes/theme.darkly.scss
@@ -32,3 +32,7 @@ $table-striped-bg:$dark;
 .execution-panel {
     background-color: $info !important;
 }
+
+.highlight {
+    background-color: var(--bs-primary) !important;
+}
